--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -18,3 +18,11 @@ html {
   height: 100vh;
   font-size: 1.6rem;
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
