--- a/src/assets/styles/_flex.scss
+++ b/src/assets/styles/_flex.scss
@@ -7,6 +7,14 @@
   display: flex;
   flex-direction: column;
 }
+.d-flex-column-reverse {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.d-flex-row-reverse {
+  display: flex;
+  flex-direction: row-reverse;
+}
 
 .ai-center {
   align-items: center;
