--- a/src/assets/styles/_font.scss
+++ b/src/assets/styles/_font.scss
@@ -30,8 +30,23 @@
 .fs-40 {
   font-size: 4rem;
 }
+.fs-56 {
+  font-size: 5.6rem;
+}
+.fs-80 {
+  font-size: 8rem;
+}
+.fs-104 {
+  font-size: 10.4rem;
+}
 .fs-144 {
   font-size: 14.4rem;
+}
+.fs-176 {
+  font-size: 17.6rem;
+}
+.fs-224 {
+  font-size: 22.4rem;
 }
 
 .ff-title {
