menu finished, just need to put the onclick

--- a/src/assets/styles/_theme.scss
+++ b/src/assets/styles/_theme.scss
@@ -27,6 +27,17 @@
 .b-on-surface-hover {
   background: color.$on-surface-hover;
 }
+.b-on-surface-variant {
+  background: color.$on-surface-variant;
+}
+.b-outline {
+  background: color.$outline;
+}
+
+//fill
+.f-on-surface-variant {
+  fill: color.$on-surface-variant;
+}
 
 // border
 .border-top {
