--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -178,6 +178,9 @@
 .m-8 {
   margin: 0.8rem;
 }
+.m-12 {
+  margin: 12px;
+}
 .m-16 {
   margin: 1.6rem;
 }
@@ -211,6 +214,9 @@
 }
 .mt-8 {
   margin-top: 0.8rem;
+}
+.mt-12 {
+  margin-top: 12px;
 }
 .mt-16 {
   margin-top: 1.6rem;
@@ -246,6 +252,9 @@
 .mr-8 {
   margin-right: 0.8rem;
 }
+.mr-12 {
+  margin-right: 12px;
+}
 .mr-16 {
   margin-right: 1.6rem;
 }
@@ -279,6 +288,9 @@
 }
 .mb-8 {
   margin-bottom: 0.8rem;
+}
+.mb-12 {
+  margin-bottom: 12px;
 }
 .mb-16 {
   margin-bottom: 1.6rem;
@@ -314,6 +326,9 @@
 .ml-8 {
   margin-left: 0.8rem;
 }
+.ml-12 {
+  margin-left: 12px;
+}
 .ml-16 {
   margin-left: 1.6rem;
 }
@@ -343,13 +358,29 @@
 }
 
 // width
-.width-full{
+.width-full {
   width: 100%;
+}
+.height-divider {
+  height: 1px;
+}
+@media screen and (min-width: 650px) {
+  .width-divider {
+    width: 2px;
+  }
 }
 
 // height
-.height-full{
+.height-full {
   height: 100%;
+}
+.height-divider {
+  height: 1px;
+}
+@media screen and (min-width: 650px) {
+  .height-divider {
+    height: 2px;
+  }
 }
 
 // border-radius
@@ -357,9 +388,15 @@
   border-radius: 10rem;
 }
 
-// hover 
+// hover
 .hover:hover {
   background: color.$on-surface-hover;
+}
+.hover-icons:hover span{
+  color: color.$on-surface;
+}
+.hover-icons:hover div svg path {
+  fill: color.$on-surface;
 }
 
 // cursor
