--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -34,6 +34,9 @@
 .p-80 {
   padding: 8rem;
 }
+.p-96 {
+  padding: 9.6rem;
+}
 
 .pt-5 {
   padding-top: 5px;
@@ -67,6 +70,9 @@
 }
 .pt-80 {
   padding-top: 8rem;
+}
+.pt-96 {
+  padding-top: 9.6rem;
 }
 
 .pr-5 {
@@ -102,6 +108,9 @@
 .pr-80 {
   padding-right: 8rem;
 }
+.pr-96 {
+  padding-right: 9.6rem;
+}
 
 .pb-5 {
   padding-bottom: 5px;
@@ -136,6 +145,9 @@
 .pb-80 {
   padding-bottom: 8rem;
 }
+.pb-96 {
+  padding-bottom: 9.6rem;
+}
 
 .pl-5 {
   padding-left: 5px;
@@ -169,6 +181,9 @@
 }
 .pl-80 {
   padding-left: 8rem;
+}
+.pl-96 {
+  padding-left: 9.6rem;
 }
 
 // margin
