mes debuts button working 80%

--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -413,6 +413,9 @@
 .hover-icons:hover div svg path {
   fill: color.$on-surface;
 }
+.hover-red:hover p {
+  text-decoration: underline;
+}
 
 // cursor
 .cursor-pointer {
