--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -27,6 +27,9 @@ html {
 .material-symbols-outlined {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
 }
+.material-symbols-outlined-200 {
+  font-variation-settings: 'FILL' 0, 'wght' 200, 'GRAD' 0, 'opsz' 24;
+}
 
 [data-title]:hover:after {
     opacity: 1;
