making the flash less appealing

--- a/src/assets/styles/_animation.scss
+++ b/src/assets/styles/_animation.scss
@@ -5,7 +5,7 @@
     background: color.$surface-1;
   }
   50% {
-    background: color.$primary;
+    background: color.$surface-2;
   }
   100% {
     background: color.$surface-1;
