--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,6 +3,7 @@ $primary: #FC4752;
 $surface: #111111;
 $surface-1: #181818;
 $surface-2: #252525;
+$surface-3: #2F2F2F;
 
 $on-surface: #FFFFFF;
 $on-surface-variant: #9F9F9F;
