--- a/src/assets/styles/_font.scss
+++ b/src/assets/styles/_font.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 @font-face {
   font-family: 'garet-book';
@@ -56,7 +56,9 @@
 }
 
 .ff-title {
-  font-family: 'Space Grotesk', sans-serif;
+  // font-family: 'Space Grotesk', sans-serif;
+  font-family: 'EB Garamond', serif;
+  font-weight: bold;
 }
 .ff-text {
   font-family: 'garet-book', sans-serif;
