"processus de tatouage" done

--- a/src/assets/styles/_animation.scss
+++ b/src/assets/styles/_animation.scss
@@ -17,3 +17,9 @@
   animation-duration: .7s;
   animation-delay: .7s; 
 }
+
+.target-animation-tattoo-processus{
+  animation-name: targetAnimation;
+  animation-duration: .7s;
+  animation-delay: .7s; 
+}
