working on portfolio

--- a/src/assets/styles/_animation.scss
+++ b/src/assets/styles/_animation.scss
@@ -23,3 +23,9 @@
   animation-duration: .7s;
   animation-delay: .7s; 
 }
+
+.target-animation-portfolio{
+  animation-name: targetAnimation;
+  animation-duration: .7s;
+  animation-delay: .7s; 
+}
