--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,11 +1,13 @@
-$primary: #FC4752;
+$primary: #fc4752;
 
 $surface: #111111;
 $surface-1: #181818;
 $surface-2: #252525;
-$surface-3: #2F2F2F;
+$surface-3: #2f2f2f;
 
-$on-surface: #FFFFFF;
-$on-surface-variant: #9F9F9F;
-$on-surface-hover: #1F1F1F;
+$on-surface: #ffffff;
+$on-surface-variant: #9f9f9f;
+$on-surface-hover: #1f1f1f;
 $outline: #424242;
+
+$inactive: #575757;
