--- a/src/assets/styles/_theme.scss
+++ b/src/assets/styles/_theme.scss
@@ -10,6 +10,9 @@
 .c-on-surface-variant {
   color: color.$on-surface-variant;
 }
+.c-inactive {
+  color: color.$inactive;
+}
 
 // background
 .b-primary {
