--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -372,6 +372,38 @@
   margin-left: 8rem;
 }
 
+// gap
+.gap-8 {
+  gap: 0.8rem;
+}
+.gap-16 {
+  gap: 1.6rem;
+}
+.gap-24 {
+  gap: 2.4rem;
+}
+.gap-32 {
+  gap: 3.2rem;
+}
+.gap-40 {
+  gap: 4rem;
+}
+.gap-48 {
+  gap: 4.8rem;
+}
+.gap-56 {
+  gap: 5.6rem;
+}
+.gap-64 {
+  gap: 6.4rem;
+}
+.gap-72 {
+  gap: 7.2rem;
+}
+.gap-80 {
+  gap: 8rem;
+}
+
 // width
 .width-full {
   width: 100%;
@@ -407,7 +439,7 @@
 .hover:hover {
   background: color.$on-surface-hover;
 }
-.hover-icons:hover span{
+.hover-icons:hover span {
   color: color.$on-surface;
 }
 .hover-icons:hover div svg path {
@@ -417,31 +449,30 @@
   text-decoration: underline;
 }
 .hover-chevron-right:hover {
-  padding: .8rem .4rem .8rem .8rem;
+  padding: 0.8rem 0.4rem 0.8rem 0.8rem;
   & span {
-    margin-left: .4rem;
+    margin-left: 0.4rem;
   }
 }
 .hover-chevron-left:hover {
-  padding: .8rem .8rem .8rem .4rem;
+  padding: 0.8rem 0.8rem 0.8rem 0.4rem;
   & span {
-    margin-right: .4rem;
+    margin-right: 0.4rem;
   }
 }
-@media screen and (minWidth: 800px) {
+@media screen and (minwidth: 800px) {
   .hover-chevron-right:hover {
-  padding: .8rem 0rem .8rem .8rem;
-  & span {
-    margin-left: .8rem;
+    padding: 0.8rem 0rem 0.8rem 0.8rem;
+    & span {
+      margin-left: 0.8rem;
+    }
   }
-}
-.hover-chevron-left:hover {
-  padding: .8rem .8rem .8rem 0rem;
-  & span {
-    margin-right: .8rem;
+  .hover-chevron-left:hover {
+    padding: 0.8rem 0.8rem 0.8rem 0rem;
+    & span {
+      margin-right: 0.8rem;
+    }
   }
-}
-  
 }
 
 // cursor
