--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -498,3 +498,20 @@
 .pos-fixed {
   position: fixed;
 }
+
+// transition
+.transition-1 {
+  transition: all .1s;
+}
+.transition-2 {
+  transition: all .2s;
+}
+.transition-3 {
+  transition: all .3s;
+}
+.transition-4 {
+  transition: all .4s;
+}
+.transition-5 {
+  transition: all .5s;
+}
