--- a/src/assets/styles/_animation.scss
+++ b/src/assets/styles/_animation.scss
@@ -18,13 +18,13 @@
   animation-delay: .7s; 
 }
 
-.target-animation-tattoo-processus{
+.target-animation-tattoo-processus div{
   animation-name: targetAnimation;
   animation-duration: .7s;
   animation-delay: .7s; 
 }
 
-.target-animation-portfolio{
+.target-animation-portfolio div{
   animation-name: targetAnimation;
   animation-duration: .7s;
   animation-delay: .7s; 
