--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,13 +1,13 @@
-$primary: #ff3644;
+$primary: #fc4752;
 
-$surface: #0d0d0d;
-$surface-1: #111111;
-$surface-2: #181818;
-$surface-3: #252525;
+$surface: #111111;
+$surface-1: #181818;
+$surface-2: #252525;
+$surface-3: #2f2f2f;
 
 $on-surface: #ffffff;
 $on-surface-variant: #9f9f9f;
 $on-surface-hover: rgba(255, 255, 255, 0.06);
-$outline: #191919;
+$outline: #424242;
 
 $inactive: #575757;
