--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -79,6 +79,7 @@ html {
 }
 
 .work {
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -86,4 +87,5 @@ html {
   height: 5.6rem;
   font-family: 'garet-book', sans-serif;
   background: colors.$surface-3;
+  z-index: 1000;
 }
