--- a/src/assets/components/TattooProcessus/TattooProcessus.module.scss
+++ b/src/assets/components/TattooProcessus/TattooProcessus.module.scss
@@ -1,8 +1,6 @@
 @use '../../styles/variables' as colors;
 
 .container {
-  transform: translateY(15%);
-  opacity: 0;
   transition: opacity .5s ease, transform .8s ease;
   & .box_container {
     display: flex;
@@ -12,11 +10,13 @@
       height: 100%;
       width: 10%;
       background: colors.$surface-1;
+      z-index: 1;
     }
     & .middle_box {
       position: relative;
       height: 100%;
       flex: 1;
+      z-index: 1;
       &::before {
         content: '';
         position: absolute;
@@ -25,6 +25,7 @@
         bottom: 0;
         left: 1px;
         background: colors.$surface-1;
+        z-index: -1;
       }
     }
   }
@@ -34,11 +35,13 @@
     & .side_box {
       width: 10%;
       background: colors.$surface-1;
+      z-index: 1;
     }
     & .content {
       position: relative;
       flex: 1;
       max-width: 80%;
+      z-index: 1;
       &::before {
         content: '';
         position: absolute;
@@ -55,5 +58,4 @@
 
 .visible {
   opacity: 1;
-  transform: translateY(0);
 }
