--- a/src/assets/components/ContactMe/ContactMe.module.scss
+++ b/src/assets/components/ContactMe/ContactMe.module.scss
@@ -2,7 +2,7 @@
 
 .main_container {
   position: relative;
-  transition: opacity .5s ease, transform .8s ease;
+  transition: opacity 0.5s ease, transform 0.8s ease;
   .container {
     display: flex;
     align-items: center;
@@ -31,6 +31,21 @@
       height: 100%;
       padding: 0 2.4rem;
       background: colors.$surface-1;
+      & .title {
+        font-family: 'EB Garamond', serif;
+        font-weight: bold;
+        opacity: 0;
+        transform: translateX(-30px);
+        transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) .3s,
+          transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) .3s;
+      }
+      & .text {
+        padding-top: 0.8rem;
+        opacity: 0;
+        transform: translateX(-30px);
+        transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.35s,
+          transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.35s;
+      }
     }
     & .button {
       position: relative;
@@ -59,5 +74,6 @@
 }
 
 .visible {
-  opacity: 1;
+  opacity: 1 !important;
+  transform: translateX(0) !important;
 }
