--- a/src/assets/components/Starting/Starting.module.scss
+++ b/src/assets/components/Starting/Starting.module.scss
@@ -4,8 +4,6 @@
   display: flex;
   width: 100%;
   padding-bottom: 1px;
-  opacity: 1;
-  transition: opacity 0.4s ease, transform 0.8s ease;
   & .text_container {
     position: relative;
     display: flex;
@@ -20,6 +18,24 @@
       left: 0;
       z-index: -1;
       background: colors.$surface-1;
+    }
+    & .title {
+      opacity: 0;
+      transform: translateX(-30px);
+      transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.3s,
+        transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.3s;
+    }
+    & .text_1 {
+      opacity: 0;
+      transform: translateX(-30px);
+      transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.35s,
+        transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.35s;
+    }
+    & .text_2 {
+      opacity: 0;
+      transform: translateX(-30px);
+      transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.4s,
+        transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.4s;
     }
   }
   & .photo_container {
@@ -40,5 +56,6 @@
 }
 
 .visible {
-  opacity: 1;
+  opacity: 1 !important;
+  transform: translateX(0) !important;
 }
