--- a/src/assets/components/TattooProcessus/TattooProcessus.module.scss
+++ b/src/assets/components/TattooProcessus/TattooProcessus.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/variables' as colors;
 
 .container {
-  transition: opacity .5s ease, transform .8s ease;
+  transition: opacity 0.5s ease, transform 0.8s ease;
   & .box_container {
     display: flex;
     width: 100%;
@@ -52,10 +52,35 @@
         background: colors.$surface-1;
         z-index: -1;
       }
+      & .title {
+        opacity: 0;
+        transform: translateX(-30px);
+        transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81),
+          transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81);
+      }
+      & .list_1 {
+        opacity: 0;
+        transform: translateX(-30px);
+        transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.05s,
+          transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.05s;
+      }
+      & .list_2 {
+        opacity: 0;
+        transform: translateX(-30px);
+        transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.1s,
+          transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.1s;
+      }
+      & .list_3 {
+        opacity: 0;
+        transform: translateX(-30px);
+        transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.15s,
+          transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.15s;
+      }
     }
   }
 }
 
 .visible {
-  opacity: 1;
+  opacity: 1 !important;
+  transform: translateX(0) !important;
 }
