--- a/src/assets/components/Starting/Starting.module.scss
+++ b/src/assets/components/Starting/Starting.module.scss
@@ -22,20 +22,20 @@
     & .title {
       opacity: 0;
       transform: translateX(-30px);
-      transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.3s,
-        transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.3s;
+      transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81),
+        transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81);
     }
     & .text_1 {
       opacity: 0;
       transform: translateX(-30px);
-      transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.35s,
-        transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.35s;
+      transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.05s,
+        transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.05s;
     }
     & .text_2 {
       opacity: 0;
       transform: translateX(-30px);
-      transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.4s,
-        transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.4s;
+      transition: opacity 0.25s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.1s,
+        transform 0.3s cubic-bezier(0.3, 0.83, 0.45, 0.81) 0.1s;
     }
   }
   & .photo_container {
