--- a/src/assets/components/Form/Form.module.scss
+++ b/src/assets/components/Form/Form.module.scss
@@ -11,12 +11,14 @@
   align-items: center;
   justify-content: center;
   color: #D0C4C3;
+  background: rgba($color: #000000, $alpha: 0.5);
   & .modale_container {
     display: flex;
     flex-direction: column;
     position: absolute;
     width: 42rem;
-    background: colors.$surface-3;
+    background: colors.$surface-1;
+    // background: #;
     z-index: 30;
     gap: 1.6rem;
     padding: 1.6rem;
