--- a/src/assets/components/Form/Form.module.scss
+++ b/src/assets/components/Form/Form.module.scss
@@ -16,7 +16,8 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    width: 42rem;
+    max-width: 42rem;
+    width: 90%;
     background: colors.$surface-1;
     // background: #;
     z-index: 30;
