--- a/src/assets/components/Form/Form.module.scss
+++ b/src/assets/components/Form/Form.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   display: flex;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -10,21 +10,25 @@
   z-index: 20;
   align-items: center;
   justify-content: center;
-  color: #D0C4C3;
+  color: #d0c4c3;
   background: rgba($color: #000000, $alpha: 0.5);
   & .modale_container {
     display: flex;
     flex-direction: column;
-    position: absolute;
     max-width: 42rem;
+    max-height: clamp(40rem, 90%, 60rem);
     width: 90%;
     background: colors.$surface-1;
-    // background: #;
     z-index: 30;
     gap: 1.6rem;
     padding: 1.6rem;
     font-family: 'Roboto', sans-serif;
     border-radius: 8px;
+    overflow-y: auto;
+    transition: margin .3s ease-out;
+    &::-webkit-scrollbar {
+      display: none;
+    }
     & .header {
       position: relative;
       display: flex;
@@ -41,10 +45,14 @@
         height: 4rem;
         width: 4rem;
         border-radius: 100%;
+        cursor: pointer;
+        &:hover {
+          background: rgba($color: colors.$on-surface-hover, $alpha: 0.08);
+        }
         & .icon {
-        font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
-        font-size: 2.4rem;
-      }
+          font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
+          font-size: 2.4rem;
+        }
       }
       & .text {
         font-size: 2.4rem;
@@ -53,12 +61,24 @@
     }
     & .title {
       font-size: 1.6rem;
-      margin-left: .8rem;
+      margin-left: 0.8rem;
       font-weight: 400;
     }
     & .double_input {
       display: flex;
       gap: 1.6rem;
     }
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .second_double_input {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 315px) {
+  .double_input {
+    flex-direction: column;
   }
 }
